src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}

/* colours */
/* 
Rich Black FOGRA 29: 00171F
Prussian Blue: 003459
CG Blue: 007EA7
Carolina Blue:  00A8E8

fonts 

font-family: 'Space Mono', monospace;
*/

/* variables */
:root {
  --rich-black: #00171F;
  --prussian-blue: #003459;
  --cg-blue: #007EA7;
  --carolina-blue: #00A8E8;
}

.wrapper {
  max-width: 1400px;
  width: 80%;
  margin: 0 auto;
}

.img {
  max-width: 100%;
  height: auto;
}

body {
  font-family: 'Space Mono', monospace;
}


button {
  border: none;
  font-family: 'Space Mono', monospace;
  padding: 5px;
}

button:hover {
  background-color: var(--carolina-blue);
}

/* strip styles on list elements */
ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

a {
  text-decoration: none;
  color: black;
}

.logo {
  width: 20%;
}

.nav-bar {
  display: flex;
  align-items: center;
}

.nav-bar__links {
    width: 70%;
}

.nav-bar__links li {
  display: inline-block;
  margin-left: 10px;
}

.nav-bar__cart-icon {
  width: 30%;
}

.slide-out-cart {
  height: 100%;
  width: 40%;
  position: fixed;
  z-index: 1;
  right: 0;
  top: 0;
  background-color: white;
  box-shadow: 0 8px 6px 1px black;
  transition: width .5s;
}

.slide-out-cart-container {
  position: relative;
  height: 100%;
}

.cart-info {
  position: absolute;
  bottom: 20px;
  width: 100%;
}

.header-background {
  background-image: url('http://matthopecodes.com/project-five-assets/alice-layout.jpg');
  background-size: cover;
  background-attachment: scroll;
  background-position: top;
  height: 70vh;
  padding-top: 400px;
}

.products-flex {
  display: flex;
  flex-wrap: wrap;
}

.product {
  width: calc(100% / 3);
  margin: 15px auto;
}


.page-loader {
  width: 50%;
  margin: 0 auto;
  margin-top: 200px;
}


.order-by {
  padding: 50px 0;

}

.order-by__btn {
  margin: 5px 10px;
  background-color: none;
  
}

.slide-out-cart__exit-btn:hover {
  color: var(--carolina-blue);
}

.cart-icon:hover {
  color: var(--carolina-blue);
}

footer {
  padding-top: 100px;
}


/* media queries */

/* Portrait tablet and small desktops */
@media (max-width: 940px) {
}

/* Landscape phone to portrait tablet */
@media (max-width: 768px) {
  .product {
    width: 60%;
  }
  .orderBy__btn {
    display: block;
    margin: 5px auto;
  }

  .slide-out-cart {
    width: 55%;
  }
}

/* Landscape phones and down */
@media (max-width: 480px) {
  .wrapper {
    width: 95%;
  }
}

